# amiro_slam

./: CMakeLists.txt  README.md  package.xml
bags/: 2018-06-14-20-51-51_QUT_Lab-Tour.bag
config/: costmap_common_params.yaml  costmap_global_laser.yaml  local_costmap_params.yaml  planner.yaml  rsb.conf
launch/: bridges.launch  configure.launch  keyboard_teleop.launch  move_base.launch  navigation.launch  slam.launch  start.launch  start_amiro.launch  start_gazebo.launch  start_rosbag.launch  start_rsbag.launch  xbox360_teleop.launch
rviz/: config.rviz
scripts/: rsbag_record.sh  timed_roslaunch.sh
src/: dynamic_tf_with_odom.cpp  ros_laser_scan_to_ros_pointcloud2.cpp
worlds/: train.world
