<?xml version="1.0"?>
<package format="2">
  <name>amiro_slam</name>
  <version>0.0.0</version>
  <description>The amiro_slam package</description>
  <maintainer email="tkorthals@cit-ec.uni-bielefeld.de">Timo Korthals</maintainer>
  <maintainer email="drudolph@techfak.uni-bielefeld.de">Daniel Rudolph</maintainer>
  <maintainer email="jhomburg@techfak.uni-bielefeld.de">Jonas Homburg</maintainer>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>tf</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>laser_geometry</depend>
  <depend>amiro_robot</depend>
  <depend>amiro_msgs</depend>
  <depend>ros_to_rsb_bridge</depend>
  <depend>rsb_to_ros_bridge</depend>
  <depend>frontier_exploration</depend>
  <depend>hector_mapping</depend>
  <depend>octomap_server</depend>
  <depend>gmapping</depend>
  <depend>turtlebot_teleop/</depend>
  <depend>move_base</depend>
  <export>

  </export>
</package>
